grammars-v4/NinjaParser.java
// Generated from /storage/emulated/0/AndroidIDEProjects/Ghost-web-ide2/grammars-v4/Ninja.g4 by ANTLR 4.13.1
package org.antlr.parser.antlr4.ninja;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class NinjaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, WS=8, Dot=9, Public=10, 
		For=11, If=12, Pwd=13, Coordinated=14, Index=15, Get=16, Set=17, At=18, 
		Class=19, Interface=20, Try=21, Handler=22, Apply=23, Aslo=24, Run=25, 
		Hash=26, OpenTag=27;
	public static final int
		RULE_install = 0, RULE_user = 1, RULE_forsteament = 2, RULE_ifsteament = 3, 
		RULE_pwdstemant = 4, RULE_coordinatedstemant = 5, RULE_setstement = 6, 
		RULE_getstement = 7, RULE_classorinterfacePaser = 8, RULE_trystemant = 9, 
		RULE_hanlderstemant = 10, RULE_asloruner = 11, RULE_runruner = 12, RULE_applyruner = 13, 
		RULE_hashcomment = 14, RULE_opentagid = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"install", "user", "forsteament", "ifsteament", "pwdstemant", "coordinatedstemant", 
			"setstement", "getstement", "classorinterfacePaser", "trystemant", "hanlderstemant", 
			"asloruner", "runruner", "applyruner", "hashcomment", "opentagid"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'?'", "':'", "'?('", "'!'", null, "'.'", 
			"'public'", "'for'", "'if'", "'pwd'", "'coordinated'", null, "'get'", 
			"'set'", "'@'", "'class'", "'interface'", "'try'", "'handler'", "'apply'", 
			"'aslo'", "'run'", "'#'", "'<'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "WS", "Dot", "Public", 
			"For", "If", "Pwd", "Coordinated", "Index", "Get", "Set", "At", "Class", 
			"Interface", "Try", "Handler", "Apply", "Aslo", "Run", "Hash", "OpenTag"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Ninja.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NinjaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstallContext extends ParserRuleContext {
		public InstallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_install; }
	 
		public InstallContext() { }
		public void copyFrom(InstallContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstallRuleContext extends InstallContext {
		public TerminalNode EOF() { return getToken(NinjaParser.EOF, 0); }
		public List<UserContext> user() {
			return getRuleContexts(UserContext.class);
		}
		public UserContext user(int i) {
			return getRuleContext(UserContext.class,i);
		}
		public InstallRuleContext(InstallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterInstallRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitInstallRule(this);
		}
	}

	public final InstallContext install() throws RecognitionException {
		InstallContext _localctx = new InstallContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_install);
		int _la;
		try {
			_localctx = new InstallRuleContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 209418752L) != 0)) {
				{
				{
				setState(32);
				user();
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(38);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UserContext extends ParserRuleContext {
		public ForsteamentContext forsteament() {
			return getRuleContext(ForsteamentContext.class,0);
		}
		public IfsteamentContext ifsteament() {
			return getRuleContext(IfsteamentContext.class,0);
		}
		public PwdstemantContext pwdstemant() {
			return getRuleContext(PwdstemantContext.class,0);
		}
		public CoordinatedstemantContext coordinatedstemant() {
			return getRuleContext(CoordinatedstemantContext.class,0);
		}
		public SetstementContext setstement() {
			return getRuleContext(SetstementContext.class,0);
		}
		public GetstementContext getstement() {
			return getRuleContext(GetstementContext.class,0);
		}
		public ClassorinterfacePaserContext classorinterfacePaser() {
			return getRuleContext(ClassorinterfacePaserContext.class,0);
		}
		public TrystemantContext trystemant() {
			return getRuleContext(TrystemantContext.class,0);
		}
		public HanlderstemantContext hanlderstemant() {
			return getRuleContext(HanlderstemantContext.class,0);
		}
		public OpentagidContext opentagid() {
			return getRuleContext(OpentagidContext.class,0);
		}
		public HashcommentContext hashcomment() {
			return getRuleContext(HashcommentContext.class,0);
		}
		public RunrunerContext runruner() {
			return getRuleContext(RunrunerContext.class,0);
		}
		public AslorunerContext asloruner() {
			return getRuleContext(AslorunerContext.class,0);
		}
		public UserContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_user; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterUser(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitUser(this);
		}
	}

	public final UserContext user() throws RecognitionException {
		UserContext _localctx = new UserContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_user);
		try {
			setState(53);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				forsteament();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				ifsteament();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(42);
				pwdstemant();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(43);
				coordinatedstemant();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(44);
				setstement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(45);
				getstement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(46);
				classorinterfacePaser();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(47);
				trystemant();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(48);
				hanlderstemant();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(49);
				opentagid();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(50);
				hashcomment();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(51);
				runruner();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(52);
				asloruner();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForsteamentContext extends ParserRuleContext {
		public ForsteamentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forsteament; }
	 
		public ForsteamentContext() { }
		public void copyFrom(ForsteamentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ForStatementContext extends ForsteamentContext {
		public TerminalNode For() { return getToken(NinjaParser.For, 0); }
		public TerminalNode Index() { return getToken(NinjaParser.Index, 0); }
		public ForStatementContext(ForsteamentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterForStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitForStatement(this);
		}
	}

	public final ForsteamentContext forsteament() throws RecognitionException {
		ForsteamentContext _localctx = new ForsteamentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_forsteament);
		try {
			_localctx = new ForStatementContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(For);
			setState(56);
			match(T__0);
			setState(57);
			match(Index);
			setState(58);
			match(T__1);
			setState(59);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfsteamentContext extends ParserRuleContext {
		public IfsteamentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifsteament; }
	 
		public IfsteamentContext() { }
		public void copyFrom(IfsteamentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfStatementWithoutBlockContext extends IfsteamentContext {
		public TerminalNode If() { return getToken(NinjaParser.If, 0); }
		public TerminalNode Index() { return getToken(NinjaParser.Index, 0); }
		public IfStatementWithoutBlockContext(IfsteamentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterIfStatementWithoutBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitIfStatementWithoutBlock(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfStatementWithBlockContext extends IfsteamentContext {
		public TerminalNode If() { return getToken(NinjaParser.If, 0); }
		public TerminalNode Index() { return getToken(NinjaParser.Index, 0); }
		public IfStatementWithBlockContext(IfsteamentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterIfStatementWithBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitIfStatementWithBlock(this);
		}
	}

	public final IfsteamentContext ifsteament() throws RecognitionException {
		IfsteamentContext _localctx = new IfsteamentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifsteament);
		try {
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new IfStatementWithBlockContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				match(If);
				setState(62);
				match(T__0);
				setState(63);
				match(Index);
				setState(64);
				match(T__1);
				setState(65);
				match(T__2);
				}
				break;
			case 2:
				_localctx = new IfStatementWithoutBlockContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				match(If);
				setState(67);
				match(T__0);
				setState(68);
				match(Index);
				setState(69);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PwdstemantContext extends ParserRuleContext {
		public PwdstemantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pwdstemant; }
	 
		public PwdstemantContext() { }
		public void copyFrom(PwdstemantContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PwdStatementContext extends PwdstemantContext {
		public TerminalNode Pwd() { return getToken(NinjaParser.Pwd, 0); }
		public List<TerminalNode> Index() { return getTokens(NinjaParser.Index); }
		public TerminalNode Index(int i) {
			return getToken(NinjaParser.Index, i);
		}
		public PwdStatementContext(PwdstemantContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterPwdStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitPwdStatement(this);
		}
	}

	public final PwdstemantContext pwdstemant() throws RecognitionException {
		PwdstemantContext _localctx = new PwdstemantContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pwdstemant);
		try {
			_localctx = new PwdStatementContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(Pwd);
			setState(73);
			match(Index);
			setState(74);
			match(T__3);
			setState(75);
			match(Index);
			setState(76);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CoordinatedstemantContext extends ParserRuleContext {
		public CoordinatedstemantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_coordinatedstemant; }
	 
		public CoordinatedstemantContext() { }
		public void copyFrom(CoordinatedstemantContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CoordinatedStatementContext extends CoordinatedstemantContext {
		public TerminalNode Coordinated() { return getToken(NinjaParser.Coordinated, 0); }
		public TerminalNode Index() { return getToken(NinjaParser.Index, 0); }
		public TerminalNode Apply() { return getToken(NinjaParser.Apply, 0); }
		public CoordinatedStatementContext(CoordinatedstemantContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterCoordinatedStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitCoordinatedStatement(this);
		}
	}

	public final CoordinatedstemantContext coordinatedstemant() throws RecognitionException {
		CoordinatedstemantContext _localctx = new CoordinatedstemantContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_coordinatedstemant);
		try {
			_localctx = new CoordinatedStatementContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(Coordinated);
			setState(79);
			match(T__5);
			setState(80);
			match(Index);
			setState(81);
			match(Apply);
			setState(82);
			match(T__1);
			setState(83);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetstementContext extends ParserRuleContext {
		public SetstementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setstement; }
	 
		public SetstementContext() { }
		public void copyFrom(SetstementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SetStatementContext extends SetstementContext {
		public TerminalNode Set() { return getToken(NinjaParser.Set, 0); }
		public TerminalNode At() { return getToken(NinjaParser.At, 0); }
		public TerminalNode Index() { return getToken(NinjaParser.Index, 0); }
		public SetStatementContext(SetstementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterSetStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitSetStatement(this);
		}
	}

	public final SetstementContext setstement() throws RecognitionException {
		SetstementContext _localctx = new SetstementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_setstement);
		try {
			_localctx = new SetStatementContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(Set);
			setState(86);
			match(At);
			setState(87);
			match(Index);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GetstementContext extends ParserRuleContext {
		public GetstementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_getstement; }
	 
		public GetstementContext() { }
		public void copyFrom(GetstementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GetStatementWithCallContext extends GetstementContext {
		public TerminalNode Get() { return getToken(NinjaParser.Get, 0); }
		public TerminalNode Index() { return getToken(NinjaParser.Index, 0); }
		public GetStatementWithCallContext(GetstementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterGetStatementWithCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitGetStatementWithCall(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GetStatementWithoutCallContext extends GetstementContext {
		public TerminalNode Get() { return getToken(NinjaParser.Get, 0); }
		public TerminalNode Index() { return getToken(NinjaParser.Index, 0); }
		public GetStatementWithoutCallContext(GetstementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterGetStatementWithoutCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitGetStatementWithoutCall(this);
		}
	}

	public final GetstementContext getstement() throws RecognitionException {
		GetstementContext _localctx = new GetstementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_getstement);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new GetStatementWithoutCallContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				match(Get);
				setState(90);
				match(Index);
				}
				break;
			case 2:
				_localctx = new GetStatementWithCallContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				match(Get);
				setState(92);
				match(T__0);
				setState(93);
				match(Index);
				setState(94);
				match(T__1);
				setState(95);
				match(T__6);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassorinterfacePaserContext extends ParserRuleContext {
		public ClassorinterfacePaserContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classorinterfacePaser; }
	 
		public ClassorinterfacePaserContext() { }
		public void copyFrom(ClassorinterfacePaserContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ClassStatementContext extends ClassorinterfacePaserContext {
		public TerminalNode Class() { return getToken(NinjaParser.Class, 0); }
		public TerminalNode WS() { return getToken(NinjaParser.WS, 0); }
		public TerminalNode Index() { return getToken(NinjaParser.Index, 0); }
		public ClassStatementContext(ClassorinterfacePaserContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterClassStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitClassStatement(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceStatementContext extends ClassorinterfacePaserContext {
		public TerminalNode Interface() { return getToken(NinjaParser.Interface, 0); }
		public TerminalNode WS() { return getToken(NinjaParser.WS, 0); }
		public TerminalNode Index() { return getToken(NinjaParser.Index, 0); }
		public InterfaceStatementContext(ClassorinterfacePaserContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterInterfaceStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitInterfaceStatement(this);
		}
	}

	public final ClassorinterfacePaserContext classorinterfacePaser() throws RecognitionException {
		ClassorinterfacePaserContext _localctx = new ClassorinterfacePaserContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_classorinterfacePaser);
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Class:
				_localctx = new ClassStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				match(Class);
				setState(99);
				match(WS);
				setState(100);
				match(Index);
				setState(101);
				match(T__2);
				}
				break;
			case Interface:
				_localctx = new InterfaceStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				match(Interface);
				setState(103);
				match(WS);
				setState(104);
				match(Index);
				setState(105);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TrystemantContext extends ParserRuleContext {
		public TrystemantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trystemant; }
	 
		public TrystemantContext() { }
		public void copyFrom(TrystemantContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TryStatementWithBlockContext extends TrystemantContext {
		public TerminalNode Try() { return getToken(NinjaParser.Try, 0); }
		public TerminalNode WS() { return getToken(NinjaParser.WS, 0); }
		public TryStatementWithBlockContext(TrystemantContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterTryStatementWithBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitTryStatementWithBlock(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TryStatementWithoutBlockContext extends TrystemantContext {
		public TerminalNode Try() { return getToken(NinjaParser.Try, 0); }
		public TryStatementWithoutBlockContext(TrystemantContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterTryStatementWithoutBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitTryStatementWithoutBlock(this);
		}
	}

	public final TrystemantContext trystemant() throws RecognitionException {
		TrystemantContext _localctx = new TrystemantContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_trystemant);
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new TryStatementWithBlockContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				match(Try);
				setState(109);
				match(WS);
				setState(110);
				match(T__2);
				}
				break;
			case 2:
				_localctx = new TryStatementWithoutBlockContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(Try);
				setState(112);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HanlderstemantContext extends ParserRuleContext {
		public HanlderstemantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hanlderstemant; }
	 
		public HanlderstemantContext() { }
		public void copyFrom(HanlderstemantContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HandlerStatementContext extends HanlderstemantContext {
		public TerminalNode Handler() { return getToken(NinjaParser.Handler, 0); }
		public TerminalNode Index() { return getToken(NinjaParser.Index, 0); }
		public HandlerStatementContext(HanlderstemantContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).enterHandlerStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NinjaListener ) ((NinjaListener)listener).exitHandlerStatement(this);
		}
	}

	public final HanlderstemantContext hanlderstemant() throws RecognitionException {
		HanlderstemantContext _localctx = new HanlderstemantContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_hanlderstemant);
		try {
			_localctx = new HandlerStatementContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(Handler);
			setState(116);
			match(T__0);
			setState(117);
			match(Index);
			setState(118);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
